--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -992,13 +992,13 @@ build you will also need
 The Tcl/Tk support files are in a zip file at
 @uref{http://www.stats.ox.ac.uk/@/pub/@/Rtools/}: unzip this in
 @var{R_HOME}, and it will add directory tree @file{@var{R_HOME}/Tcl}.
+Please make sure you get the right version: there is a 32-bit version
+and two 64-bit versions (for R 2.11.x and 2.12.x).
 
 @item
 You need @code{libpng} and @code{jpeg} sources (available, e.g., from
-@uref{http://www.libpng.org/}, @uref{http://www.ijg.org},
-@uref{http://www.libtiff.org/}.@footnote{but the current versions are at
-@uref{ftp://ftp.remotesensing.org/pub/libtiff/}: we used
-@file{tiff-3.9.1.tar.gz}.}  You will need files
+@uref{http://www.libpng.org/}, @uref{http://www.ijg.org} and
+@uref{ftp://ftp.remotesensing.org/pub/libtiff/}).  You will need files
 @file{libpng-1.2.18.tar.gz}, @file{jpegsrc.v6b.tar.gz},
 @file{tiff-3.8.0.tar.gz} or later.
 
@@ -1077,7 +1077,7 @@ ample memory, and is not 100% reliable.
 @subsection Building the bitmap files
 @cindex Rbitmap.dll
 
-The file @file{@var{R_HOME}/library/grDevices/libs/Rbitmap.dll} is not built
+The file @file{@var{R_HOME}/library/grDevices/libs/@{i386,x64@}Rbitmap.dll} is not built
 automatically.  
 
 Running @code{make} in @file{@var{R_HOME}/src/gnuwin32/bitmap}
@@ -1211,8 +1211,8 @@ make myR IMAGEDIR=rootdir
 where @file{rootdir} is the path to the root of the customized
 installation (forward slashes and no spaces, please).  
 
-Both methods create an executable with the standard name,
-@file{@value{RWVERSION}-win32.exe}, so please rename it to indicate that
+Both methods create an executable with a standard name such as
+@file{@value{RWVERSION}-win.exe}, so please rename it to indicate that
 it is customized.  If you intend to @emph{distribute} a customized
 installer please do check that license requirements are met -- note that
 the installer will state that the contents are distributed under GPL-2
@@ -1244,9 +1244,9 @@ It makes use of the Windows Installer XML (WiX) toolkit @emph{version
 2.0} available from @uref{http://wix.sourceforge.net/}.  (This needs the
 .NET 1.1 framework installed: it ran on a vanilla Windows XP SP2
 machine. Unfortunately the file format has been changed within the same
-version: currently our code works with releases 2.0.4221.0 and
-2.0.5805.0 -- the latter is now said to be `production/stable'.)  Once
-WiX is installed, set the path to its home directory in @file{MkRules.local}.
+version: currently our code works with release 2.0.5805.0 -- the latter
+is said to be `production/stable'.)  Once WiX is installed, set the path
+to its home directory in @file{MkRules.local}.
 
 You need to have the files for a complete R build, including bitmap and
 Tcl/Tk support and the manuals, as well as the recommended packages.
@@ -1337,8 +1337,7 @@ given by @code{R.home()}).
 
 The @file{bin/macosx} directory of a @acronym{CRAN} site contains
 binaries for Mac OS X for a base distribution and a large number of
-add-on packages from @acronym{CRAN} to run on Mac OS X 10.5/6 (with a
-different build for version 10.4.4 or higher).
+add-on packages from @acronym{CRAN} to run on Mac OS X 10.5/6.
 
 The simplest way is to use @file{R-@value{VERSIONno}.pkg}: just
 double-click on the icon.  Note that Tcl/Tk and the Fortran compiler
@@ -1545,12 +1544,12 @@ library paths, separated by colons (semicolons on Windows).
 
 
 Packages may be distributed in source form or compiled binary form.
-Installing source packages requires that compilers and tools be
-installed.  Binary packages are platform-specific and generally need no
-special tools to install, but see the documentation for your platform
-for details.
+Installing source packages which contain C/C++/Fortran code requires
+that compilers and related tools be installed.  Binary packages are
+platform-specific and generally need no special tools to install, but
+see the documentation for your platform for details.
 
-Note that you need to specify implicitly or explicitly the library to
+Note that you may need to specify implicitly or explicitly the library to
 which the package is to be installed.  This is only an issue if you have
 more than one library, of course.
 
@@ -1603,8 +1602,8 @@ ask the user (in an interactive session) if the default user library
 should be created, and if allowed to will install the packages there.
 
 
-If you want to fetch a package and all those it depends on that are
-not already installed, use e.g.
+If you want to fetch a package and all those it depends on (in any way)
+that are not already installed, use e.g.
 
 @example
 > install.packages("Rcmdr", dependencies = TRUE)
@@ -1676,7 +1675,7 @@ architectures---details to come.
 @subsection Mac OS X
 
 On Mac OS X @code{install.packages} works as it does on other Unix-like
-systems, but there are additional type @code{mac.binary*} (the default
+systems, but there are additional types @code{mac.binary*} (the default
 in the @acronym{CRAN} distribution) that can be passed to
 @code{install.packages} in order to download and install binary packages
 from a suitable repository, and is the default for @acronym{CRAN} builds
@@ -1728,7 +1727,7 @@ FCFLAGS=-g -O
 
 When installing packages from their sources, there are some extra
 considerations on installations which use sub-architectures.  These are
-commonly used on Mac OS and (from @R{} 2.12.0) on Windows, but can in
+commonly used on Mac OS X and (from @R{} 2.12.0) on Windows, but can in
 principle be used on other platforms.
 
 When a source package is installed by a build of @R{} which supports
@@ -1824,11 +1823,14 @@ can be used, e.g.@: @file{.tar.bz2} or @file{.tar.xz} files.
 
 @item 
 @code{"win.binary"}: located at @file{bin/windows/contrib/@var{x.y}} for
-@R{} versions @var{x.y.z} and containing @file{.zip} files for 32-bit Windows
+@R{} versions @var{x.y.z} and containing @file{.zip} files for 32-bit
+Windows.
 
 @item 
-@code{"win64.binary"}: located at @file{bin/windows64/contrib/@var{x.y}} for
-@R{} versions @var{x.y.z} and containing @file{.zip} files for 64-bit Windows.
+@code{"win64.binary"}: located at @file{bin/windows64/contrib/@var{x.y}}
+for @R{} versions @var{x.y.z} and containing @file{.zip} files for
+64-bit Windows.  (This may be merged with @code{"win.binary"} before the
+release of R 2.12.0.)
 
 @item 
 @code{"mac.binary"}: located at
