use src copies when build multiple sub-architectures
git-svn-id: https://svn.r-project.org/R/trunk@51896 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -102,6 +102,11 @@ PACKAGE INSTALLATION
 	There is a new default filter, "subarch", in
 	available.packages() to make use of this.
 
+	Code is compiled in a copy of the 'src' directory when a
+	package is installed for more than one sub-architecture: this
+	avoid problems with cleaning the sources between building
+	sub-architectures.
+
 
 C-LEVEL FACILITIES
 
