Port r51908 from trunk.
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51909 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -43,6 +43,9 @@ BUG FIXES
 
     o	Rd2pdf sometimes needed a further pdflatex pass to get
 	hyperlinked pages correct.
+	
+    o	interaction() produced malformed results when levels were
+    	duplicated, causing segfaults in split().
 
 
 
