ported r51906 [package.skeleton()/promptClass()] from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@51910 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -26,6 +26,8 @@ BUG FIXES
 
     o 	package.skeleton() sometimes failed to fix filenames for .R or
     	.Rd files to start with an alphanumeric.  (PR#14253)
+	It also failed when only an S4 class without any methods was
+	defined.  (PR#14280)
 
     o	splinefun(*, method = "monoH.FC")  was not quite monotone in rare
 	cases.	(PR#14215)
