--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -944,7 +944,7 @@ which is a minimal version of Bourne-style @command{sh}.)  When
 @env{R_HOME}@footnote{formerly also @env{RHOME}, but this was removed
 in @R{} 2.12.0.} (which uses @code{/} as the file separator) and
 @env{R_ARCH} will be set.  Use @env{R_ARCH} to decide if this is a
-64-bit build (its value there is @samp{/x64} and to install DLLs to the
+64-bit build (its value there is @samp{/x64}) and to install DLLs to the
 correct place (@code{$@{R_HOME@}/libs$@{R_ARCH@}}).  Use
 @env{R_ARCH_BIN} to find the correct place under the @file{bin}
 directory, e.g.@: @code{$@{R_HOME@}/bin$@{R_ARCH_BIN@}/Rscript.exe}.
@@ -1129,6 +1129,21 @@ directory for some purpose other than building a DLL, use a
 
 It is sometimes useful to have a target @samp{clean} in @file{Makevars}
 or @file{Makevars.win}: this will be used by @command{R CMD build}.
+
+If you want to run @R{} code in @file{Makevars}, e.g.@: to find
+configuration information, please do ensure that you use the correct
+copy of @code{R} or @code{Rscript}: there might not be one in the path
+at all, or it might be the wrong version or architecture.  The correct
+way to do this is @emph{via}
+
+@example
+$(R_HOME)/bin$(R_ARCH_BIN)/Rscript @var{filename}
+$(R_HOME)/bin$(R_ARCH_BIN)/Rscript -e '@var{R expression}'
+@end example
+
+@noindent
+where @code{$(R_ARCH_BIN)} is only needed currently on Windows.
+
 
 @node Configure example, Using F95 code, Using Makevars, Configure and cleanup
 @subsection Configure example
@@ -6946,7 +6961,7 @@ SEXP out(SEXP x, SEXP y)
   double tmp, *rx = REAL(x), *ry = REAL(y), *rans;
   SEXP ans;
 
-  nx = length(x); ny = length(y);
+  nx = length(x); ny = 8;
   PROTECT(ans = allocMatrix(REALSXP, nx, ny));
   rans = REAL(ans);
   for(i = 0; i < nx; i++) @{
@@ -6981,7 +6996,7 @@ SEXP out(SEXP x, SEXP y)
 @end group
 
 @group
-  nx = length(x); ny = length(y);
+  nx = length(x); ny = 8;
   PROTECT(ans = allocVector(REALSXP, nx*ny));
   rans = REAL(ans);
   for(i = 0; i < nx; i++) @{
