use locking for R CMD INSTALL --libs-only
git-svn-id: https://svn.r-project.org/R/trunk@51913 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -110,6 +110,10 @@ PACKAGE INSTALLATION
 	avoid problems with cleaning the sources between building
 	sub-architectures.
 
+    o	R CMD INSTALL --libs-only no longer overrides the setting of
+	locking, so a previous version of the package will be restored
+	unless --no-lock is specified.
+
 
 C-LEVEL FACILITIES
 
