install reference example output, document how to make use of it.
git-svn-id: https://svn.r-project.org/R/trunk@51917 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -843,7 +843,7 @@ Alternatively, the installed @R{} can be run, preferably with
 @example
 library("tools")
 testInstalledBasic("both")
-testInstalledPackages(scope = "base")
+testInstalledPackages(scope = "base", srcdir = R.home("tests/Examples"))
 testInstalledPackages(scope = "recommended")
 @end example
 
